[package]
name = "fanos-dromos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "DROMOS — the FANOS swift execution fabric (L9): the state machine wiring the OBOLOS private-currency pool onto TAXIS consensus, so shielded transfers execute on the blockchain (spec/platform.md §3)."
keywords = ["blockchain", "execution", "state-machine", "privacy", "fanos"]
categories = ["cryptography"]

[dependencies]
# The consensus StateMachine trait + Transaction/ExecOutcome DROMOS executes for, and the transparent
# `Accounts` ledger the hybrid state machine composes with the shielded pool.
fanos-taxis.workspace = true
# The OBOLOS shielded-pool state machine DROMOS drives, and its submission codec.
fanos-obolos = { workspace = true, features = ["std"] }
# BLAKE3 labeled hashing for the hybrid state root (transparent ‖ shielded).
fanos-primitives = { workspace = true, features = ["std"] }
# Hybrid PQ signatures authenticating transparent transfers and name-registry operations.
fanos-pqcrypto.workspace = true
# THESAUROS — the content-storage market engine (deals + proof-of-retrievability) the TAG_STORAGE arm drives.
fanos-thesauros = { workspace = true, features = ["std"] }
# HERMES — the hash time-locked contract engine the TAG_HTLC (atomic-swap) arm drives.
fanos-hermes = { workspace = true, features = ["std"] }

[lints]
workspace = true
