# fanos-keygen — distributed key generation as a running node engine.
#
# Drives the verified multi-dealer DKG (fanos-vrf::dkg) over the overlay: a cell runs a t-of-n DKG
# by exchanging Feldman dealings as DkgDeal frames and converges on a joint public key no node holds.
[package]
name = "fanos-keygen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FANOS distributed key generation as a sans-I/O node engine (networked multi-dealer DKG)"
keywords = ["dkg", "threshold", "sans-io", "overlay", "fanos"]
categories = ["cryptography", "network-programming"]

[dependencies]
fanos-field = { workspace = true, features = ["std"] }
fanos-geometry = { workspace = true, features = ["std"] }
fanos-wire = { workspace = true, features = ["std"] }
# DkgNode/BeaconNode are sans-I/O engines that speak only the contract vocabulary — the light leaf, not
# the whole OverlayNode engine crate (audit #73/#125).
fanos-ports = { workspace = true, features = ["std"] }
fanos-vrf.workspace = true
# The canonical bounded codec (recovery-authorization wire form) and the shared Epoch type.
fanos-primitives = { workspace = true, features = ["std"] }
# The recovery authority signs re-genesis certificates with a hybrid PQ identity signature (audit §4).
fanos-pqcrypto.workspace = true
# Wipe this node's DKG secret contribution from memory on drop.
zeroize = { workspace = true }

[lints]
workspace = true
