[package]
name = "fanos-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FANOS node — the unified `fanos` daemon: composes the sans-I/O engines behind the QUIC driver, with a persistent self-certifying identity and bootstrap."
keywords = ["p2p", "overlay", "node", "daemon", "fanos"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "fanos"
path = "src/bin/fanos.rs"

[dependencies]
fanos-field = { workspace = true, features = ["std"] }
fanos-geometry = { workspace = true, features = ["std"] }
fanos-runtime = { workspace = true, features = ["std"] }
fanos-quic.workspace = true
# For `.fanos` name resolution: ONOMA addresses/derivations + CALYPSO descriptors.
fanos-onoma = { workspace = true, features = ["std"] }
fanos-calypso.workspace = true
# DIAULOS reliable encrypted sessions over the node's datagram transport, driven as async streams.
fanos-diaulos.workspace = true
fanos-session.workspace = true
# The anonymous profile: carry the same DIAULOS session over threshold onions to a computed meeting
# line (the sans-I/O RendezvousClient core, wrapped as an async transport under the identical stream).
fanos-rendezvous.workspace = true
fanos-pqcrypto.workspace = true
# BLAKE3 labeled hashing for the threshold-service intro id (audit #99).
fanos-primitives.workspace = true
# The SOCKS5 Dialer trait a `.fanos` dialer implements (the proxy stays transport-agnostic; the node
# is the integration point that provides a Dialer).
fanos-proxy.workspace = true
# The VPN datapath (`run_vpn` + the TUN device seam); the real TUN device is behind the `vpn` feature below.
fanos-vpn.workspace = true
# The threshold-onion router and the distributed-beacon engine the MixRelay composite hosts (E4∩E5).
fanos-aphantos.workspace = true
fanos-keygen.workspace = true
# The DKG commitment/share types (VssCommitment/VssShare) a BeaconParams config carries (§7.6, #108).
fanos-vrf.workspace = true
# The frame registry MixRelay classifies beacon vs onion traffic with.
fanos-wire.workspace = true
rand_core.workspace = true
# OS entropy to seed each dial's ephemeral handshake keys (a fresh CSPRNG per dial).
getrandom = "0.4.3"
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "sync",
    "io-util",
] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
] }

[features]
# `fanos vpn` with a real TUN device (enables the fanos-vpn `device` adapter, pulling in the platform `tun`
# crate). Off by default: without it, `fanos vpn` reports that the build lacks VPN support. Build a VPN-
# capable binary with `cargo build -p fanos-node --features vpn`.
vpn = ["fanos-vpn/device"]

[dev-dependencies]
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "time",
] }
# The live-epoch-clock test builds a 1-of-1 beacon group and reads BeaconReady notifications.
fanos-field = { workspace = true }
fanos-runtime = { workspace = true }
fanos-vrf = { workspace = true }

[lints]
workspace = true
