[package]
name = "fanos-nyx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NYX — the FANOS threshold-sheaf onion (L5 APHANTOS): geometric flag paths, t-of-(q+1) hops, holonomic ratchet, Poisson mixing."
keywords = ["onion-routing", "anonymity", "threshold", "mixnet", "fanos"]
categories = ["cryptography", "network-programming"]

[dependencies]
fanos-field.workspace = true
fanos-geometry.workspace = true
fanos-crypto.workspace = true
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
libm = { version = "0.2", default-features = false, optional = true }

[features]
default = ["std"]
std = ["fanos-geometry/std", "fanos-crypto/std"]
alloc = ["fanos-geometry/alloc", "fanos-crypto/alloc"]
# For no_std targets: supply the float backend used by the mixing entropy.
libm = ["dep:libm"]

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
