[package]
name = "fanos-obolos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OBOLOS — the FANOS private, untraceable, post-quantum currency: a shielded note pool (SKIA) with lattice value commitments, a Merkle commitment tree, and nullifiers (spec/platform.md §4)."
keywords = ["privacy", "post-quantum", "currency", "shielded", "fanos"]
categories = ["cryptography", "no-std"]

[dependencies]
# BLAKE3 labeled hashing + AEAD for the commitment tree, note commitments, nullifiers, and note delivery.
fanos-primitives = { workspace = true, default-features = false, features = ["aead"] }
# Hybrid ML-KEM for note delivery: the sender encapsulates the note opening to the recipient's key so only
# the recipient can detect and recover it (unlinkable delivery). no_std.
fanos-pqcrypto.workspace = true
# The `CryptoRng` bound for note-cipher sealing — callers supply fresh randomness per seal (no seed reuse).
rand_core = { workspace = true }
# Wipe wallet secrets (the spending seed and viewing-key material) from memory on drop (audit A6).
zeroize = { workspace = true }

[features]
default = ["std"]
std = ["alloc", "fanos-primitives/std"]
alloc = ["fanos-primitives/alloc"]

[lints]
workspace = true
