[package]
name = "fanos-observatory"
version = "0.1.0"
edition = "2024"
description = "fanos-monitor: the terminal Coherence Observatory — a native TUI reading the network's coherence self-model, for human operators (and --json for agents)"
keywords = ["tui", "observability", "coherence", "monitoring", "fanos"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "fanos-monitor"
path = "src/main.rs"

[dependencies]
# A binary runs on std; the coherence math + snapshot come from the shipped telemetry crate, so the
# operator sees exactly the production self-model.
fanos-telemetry = { workspace = true, features = ["std"] }
fanos-diakrisis = { workspace = true, features = ["std"] }
fanos-field = { workspace = true, features = ["std"] }
fanos-geometry = { workspace = true, features = ["std"] }
# The live feed drives a real cell of production OverlayNode engines under the deterministic simulator
# (the devnet-is-production seam); a remote/IPC telemetry source can be added behind the same trait.
# OPTIONAL: the shipping monitor need not compile the simulator — a lean build (real-feed / scenario
# only) drops it via `--no-default-features` (audit ARCH-10 D8: no hard prod-tool → test-sim coupling).
fanos-sim = { workspace = true, optional = true }
fanos-runtime = { workspace = true, features = ["std"] }
ratatui = { workspace = true }
crossterm = { workspace = true }

[features]
# The `--live` demo (a real cell under the simulator) is on by default; a lean operator build turns it
# off with `--no-default-features`, and then `--live` reports it was compiled out.
default = ["sim"]
sim = ["dep:fanos-sim"]

[lints]
workspace = true
