[package]
name = "fanos-pqcrypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Real post-quantum hybrid primitives for FANOS: Ed25519+ML-DSA-65 signatures, X25519+ML-KEM-768 KEM (spec §L6)."
keywords = ["post-quantum", "ml-kem", "ml-dsa", "hybrid", "fanos"]
categories = ["cryptography"]

[dependencies]
# All four vetted primitives are `no_std`. Key generation runs off a caller-supplied `SeedRng`, so we
# enable each crate's `rand_core` path (seedable keygen) and `alloc` — never `getrandom` (the OS entropy
# source), which would forfeit no_std/embedded operation.
ed25519-dalek = { version = "3", default-features = false, features = ["rand_core", "alloc", "zeroize"] }
x25519-dalek = { version = "3", default-features = false, features = ["static_secrets", "zeroize"] }
ml-kem = { version = "0.3", default-features = false, features = ["alloc"] }
ml-dsa = { version = "0.1", default-features = false, features = ["alloc", "rand_core"] }
sha3 = { version = "0.11", default-features = false }
# rand_core 0.10 matches the RustCrypto crates above (via crypto-common 0.2).
rand_core.workspace = true
blake3 = { workspace = true }
# The canonical node-ID hash rule + the NodeId type live in the light primitives core; deriving the
# node identifier here goes through it (one source of truth), so the two crates cannot drift.
fanos-primitives = { workspace = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
