[package]
name = "fanos-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FANOS cryptographic surface: domain-separated BLAKE3, MapToPoint addressing, Shamir threshold sharing, hybrid keys."
keywords = ["cryptography", "blake3", "threshold", "post-quantum", "fanos"]
categories = ["cryptography", "no-std"]

[dependencies]
fanos-field.workspace = true
fanos-geometry.workspace = true
blake3 = { workspace = true }
# Wipe Shamir share bytes (secret) on drop. `alloc` for the `Vec<u8>` share value; stays `no_std`.
zeroize = { workspace = true, features = ["alloc"] }
# The shared ChaCha20-Poly1305 AEAD (behind the `aead` feature), so the whole stack seals with one
# audited implementation. Optional: a pure-hashing consumer keeps the BLAKE3-only dependency set.
chacha20poly1305 = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["alloc", "blake3/std", "fanos-geometry/std"]
alloc = ["fanos-geometry/alloc"]
# The shared AEAD primitive (pulls chacha20poly1305). Consumers that seal/open opt in.
aead = ["dep:chacha20poly1305", "alloc"]

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
